Hook up with ANGLE translator's remove_invariant_and_centroid option.

BUG=641129,639720
TEST=webgl2_conformance
R=kbr@chromium.org
NOTRY=true
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2494923002
Cr-Commit-Position: refs/heads/master@{#431472}

Former-commit-id: f7897214efb453c76bd3c896e1cf42bcdf55ca5e