gpu/command_buffer/service/gles2_cmd_decoder.cc
@@ -3811,6 +3811,8 @@ bool GLES2DecoderImpl::InitializeShaderTranslator() {
     driver_bug_workarounds |= SH_USE_UNUSED_STANDARD_SHARED_BLOCKS;
   if (workarounds().dont_remove_invariant_for_fragment_input)
     driver_bug_workarounds |= SH_DONT_REMOVE_INVARIANT_FOR_FRAGMENT_INPUT;
+  if (workarounds().remove_invariant_and_centroid_for_essl3)
+    driver_bug_workarounds |= SH_REMOVE_INVARIANT_AND_CENTROID_FOR_ESSL3;
 
   resources.WEBGL_debug_shader_precision =
       group_->gpu_preferences().emulate_shader_precision;
